Changes According to Requirement

--- a/Privont/Web.config
+++ b/Privont/Web.config
@@ -4,6 +4,9 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <section name="trueDialog" type="TrueDialog.Configuration.TrueDialogConfigSection, TrueDialog.Client" />
+  </configSections>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -77,9 +80,9 @@
     </compilers>
   </system.codedom>
 	<connectionStrings>
-		<add name="ConnectionString" connectionString="Data Source=DESKTOP-JGR5SAC\SQLEXPRESS;Initial Catalog=Privont;User ID=sa;password='sajjadsafdar98'" providerName="System.Data.SqlClient" />
-    <add name="ConnectionString1" connectionString="Data Source=107.174.33.194;Initial Catalog=Softinn_Privont;User ID=softinn;password='Bismillah!1!'" providerName="System.Data.SqlClient" />
-	</connectionStrings>
+		<add name="ConnectionString1" connectionString="Data Source=DESKTOP-JGR5SAC\SQLEXPRESS;Initial Catalog=Privont;User ID=sa;password='sajjadsafdar98'" providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Data Source=PRIVONT;Initial Catalog=Privont;User ID=sa;password='!SuNny!70'" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.net>
     <mailSettings>
       <smtp from="sajjad.safdar98@gmail.com">
@@ -87,4 +90,25 @@
       </smtp>
     </mailSettings>
   </system.net>
-</configuration>
+<trueDialog baseUrl="https://api.truedialog.com/api/v2.1/">
+    <!-- TODO: Fill in with your login information. -->
+    <auth username="" password="" defaultAccountId="" apiKey="" apiSecret="" />
+    <!-- Try up to 3 times once every 1 second-->
+    <retryPolicy type="TrueDialog.Retry.Strategy.FixedRetryStrategy" maxTries="3" interval="0:0:1" />
+
+    <!-- Try up to 4 times retring after: .5, 1, 1.5 seconds. -->
+    <!--
+        <retryPolicy
+            type="ThreeSeventy.Vector.Client.IncrementalRetryStrategy"
+            maxTries="4"
+            interval="0:0:0.5" />
+        -->
+
+    <!-- Try up to 5 times retring after: .5, 1, 2, 4 seconds -->
+    <!--
+        <retryPolicy
+            type="ThreeSeventy.Vector.Client.ExponentialRetryStrategy"
+            maxTries="5"
+            interval="0:0:0.5" />
+        -->
+  </trueDialog></configuration>
