changes for apis

--- a/Privont/Web.config
+++ b/Privont/Web.config
@@ -85,8 +85,8 @@
   </connectionStrings>
   <system.net>
     <mailSettings>
-      <smtp from="sajjad.safdar98@gmail.com">
-        <network host="smtp.gmail.com" port="587" userName="sajjad.safdar98@gmail.com" password="rctf ovdl yvem eowr" enableSsl="true" />
+      <smtp from="info@privont.com">
+        <network host="webmail.privont.com" port="25" userName="info@privont.com" password="!SuNny!70" enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
