Change Web Config

--- a/Privont/Web.config
+++ b/Privont/Web.config
@@ -80,8 +80,8 @@
     </compilers>
   </system.codedom>
 	<connectionStrings>
-		<add name="ConnectionString" connectionString="Data Source=DESKTOP-JGR5SAC\SQLEXPRESS;Initial Catalog=Privont;User ID=sa;password='sajjadsafdar98'" providerName="System.Data.SqlClient" />
-    <add name="ConnectionString1" connectionString="Data Source=PRIVONT;Initial Catalog=Privont;User ID=sa;password='!SuNny!70'" providerName="System.Data.SqlClient" />
+		<add name="ConnectionString1" connectionString="Data Source=DESKTOP-JGR5SAC\SQLEXPRESS;Initial Catalog=Privont;User ID=sa;password='sajjadsafdar98'" providerName="System.Data.SqlClient" />
+    <add name="ConnectionString" connectionString="Data Source=PRIVONT;Initial Catalog=Privont;User ID=sa;password='!SuNny!70'" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.net>
     <mailSettings>
