--- a/Privont/Web.config
+++ b/Privont/Web.config
@@ -80,7 +80,7 @@
     </compilers>
   </system.codedom>
 	<connectionStrings>
-		<add name="ConnectionString" connectionString="Data Source=DESKTOP-JGR5SAC\SQLEXPRESS;Initial Catalog=Privont;User ID=sa;password='sajjadsafdar98'" providerName="System.Data.SqlClient" />
+		<add name="ConnectionString" connectionString="Data Source=DESKTOP-0TQUV80\DOTNETSERVER2K19;Initial Catalog=Privont;User ID=sa;password='551320'" providerName="System.Data.SqlClient" />
     <add name="ConnectionString1" connectionString="Data Source=PRIVONT;Initial Catalog=Privont;User ID=sa;password='!SuNny!70'" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.net>
