--- a/Privont/Privont.csproj
+++ b/Privont/Privont.csproj
@@ -385,6 +385,7 @@
     <Compile Include="Controllers\GoogleAuthController.cs" />
     <Compile Include="Controllers\GoogleAuthLoginController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\InvitationReferenceController.cs" />
     <Compile Include="Controllers\LeadInfoController.cs" />
     <Compile Include="Controllers\LenderInfoController.cs" />
     <Compile Include="Controllers\PaymentGatewayController.cs" />
@@ -10770,79 +10771,6 @@
     <Content Include="Browser_Components\MainIndex\assets\themes\privont\fonts\thegem-socials.ttf" />
     <Content Include="Browser_Components\MainIndex\assets\themes\privont\fonts\thegem-socials.woff" />
     <Content Include="Browser_Components\MainIndex\assets\themes\privont\fonts\thegem-socialsd41d.eot" />
-    <Content Include="Browser_Components\MainIndex\.git\COMMIT_EDITMSG" />
-    <Content Include="Browser_Components\MainIndex\.git\config" />
-    <Content Include="Browser_Components\MainIndex\.git\description" />
-    <Content Include="Browser_Components\MainIndex\.git\FETCH_HEAD" />
-    <Content Include="Browser_Components\MainIndex\.git\HEAD" />
-    <Content Include="Browser_Components\MainIndex\.git\hooks\applypatch-msg.sample" />
-    <Content Include="Browser_Components\MainIndex\.git\hooks\commit-msg.sample" />
-    <Content Include="Browser_Components\MainIndex\.git\hooks\fsmonitor-watchman.sample" />
-    <Content Include="Browser_Components\MainIndex\.git\hooks\post-update.sample" />
-    <Content Include="Browser_Components\MainIndex\.git\hooks\pre-applypatch.sample" />
-    <Content Include="Browser_Components\MainIndex\.git\hooks\pre-commit.sample" />
-    <Content Include="Browser_Components\MainIndex\.git\hooks\pre-merge-commit.sample" />
-    <Content Include="Browser_Components\MainIndex\.git\hooks\pre-push.sample" />
-    <Content Include="Browser_Components\MainIndex\.git\hooks\pre-rebase.sample" />
-    <Content Include="Browser_Components\MainIndex\.git\hooks\pre-receive.sample" />
-    <Content Include="Browser_Components\MainIndex\.git\hooks\prepare-commit-msg.sample" />
-    <Content Include="Browser_Components\MainIndex\.git\hooks\push-to-checkout.sample" />
-    <Content Include="Browser_Components\MainIndex\.git\hooks\update.sample" />
-    <Content Include="Browser_Components\MainIndex\.git\index" />
-    <Content Include="Browser_Components\MainIndex\.git\info\exclude" />
-    <Content Include="Browser_Components\MainIndex\.git\logs\HEAD" />
-    <Content Include="Browser_Components\MainIndex\.git\logs\refs\heads\master" />
-    <Content Include="Browser_Components\MainIndex\.git\logs\refs\remotes\origin\HEAD" />
-    <Content Include="Browser_Components\MainIndex\.git\logs\refs\remotes\origin\master" />
-    <Content Include="Browser_Components\MainIndex\.git\logs\refs\stash" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\01\53428a2efd5d2ba82f6a1af93ef20fb6f91d91" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\01\893d5f530f0fcd648b5e0c3bf90677b00fd500" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\07\1d712259fa3c943c79e87eab0525d774e000f6" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\0b\14dfbbae4b10713caf077c1d6dd412f8599862" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\0b\9f55f36b03cac3c6e6af453ba4c47beadc34ef" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\0f\979bad84a0a8a1244c8c0dc20c318ca5319edf" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\17\576f75f8b6b01613980941b0b7e0b4d7c42d44" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\18\02d1240f85a4e9c7842714b9fee22a5767f488" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\1c\4ab007de8ccacd46946d8d1bac75d9fb2c5412" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\29\97f85f069ad2f3037f17eebdd59ba90f8d4578" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\2e\af855c3f80ae05298388c96bf7dba771abdea9" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\33\c891c616a7e6f21366a9687aed923ac456f3bf" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\37\19b0cb67e3f56c1eb184d907992283fd594c70" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\39\c6cf216efc0e055a6b14112adb53530f53e06a" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\41\fe430d03018180649bb32658ee6ae2f63fc4e5" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\45\4fef57a44003dcbbbe17fff060377a5256923b" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\4a\18fa821c8f3c932a0c06b6b3ed5bd14bdc0c40" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\4f\114da05f20c710e05e8721d993d15856ccad8a" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\55\f455926031b404481848bc250d1a08fcb3d251" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\56\1bea4f023a522559e2782d5517d18f4ed80d2e" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\5e\ecd10d19e8a28fe3f0722b22c44231f56742f0" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\63\6923a43684c044988b71767effa2a847adafd7" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\68\9ecefa5c4b97529e5d3028ec3870e255d991e1" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\72\77e710ff618c20d5e4803a8477244400207988" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\7c\ca282e82c29fc03cc264b41c89c9c2315d27e7" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\7e\1ad6876ea01334a39e53237ecaf23e4ad86b67" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\83\9a90f5a4753527eab1c1a161b962db6ccb2974" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\87\0d1887419f3af87f2086b7380165fc334c72f7" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\89\84349f4d2e5e32618d93d76df7c68e2ff3463e" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\8a\589ffab0af2d49e2b9d2f46949ac089b20af70" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\9e\92268dc3968ac5fb9481f1da6e4bb9211723ca" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\a8\8bbbe54d542e72adddbcd666a75b879e2e3c29" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\a9\d5911b1c2f26fdc5889bc11a75ecb5daf03348" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\a9\e82c4b1a138da87d0dafcf0420f1e23436934d" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\ca\2a9a442b10daf03c3aa42eb374033330ec4006" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\d2\49b91a42c5ed595abae49475bb0fc798886abb" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\d9\8c9dc49b5246d781e1ac3ccb494211d8c458d8" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\e2\6255ac5977b3511713f5369ddfff512a4c9b41" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\fb\0c76bbaa12c2f4271c46d241d78083829d127e" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\fc\c90c4aef84a837957be275bc8ea237c9d5307d" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\pack\pack-fb4483b255b64f548cdfc6647cf1b591aaea88f0.idx" />
-    <Content Include="Browser_Components\MainIndex\.git\objects\pack\pack-fb4483b255b64f548cdfc6647cf1b591aaea88f0.pack" />
-    <Content Include="Browser_Components\MainIndex\.git\ORIG_HEAD" />
-    <Content Include="Browser_Components\MainIndex\.git\packed-refs" />
-    <Content Include="Browser_Components\MainIndex\.git\refs\heads\master" />
-    <Content Include="Browser_Components\MainIndex\.git\refs\remotes\origin\HEAD" />
-    <Content Include="Browser_Components\MainIndex\.git\refs\remotes\origin\master" />
-    <Content Include="Browser_Components\MainIndex\.git\refs\stash" />
     <Content Include="Browser_Components\MainIndex\.vscode\settings.json" />
     <Content Include="Browser_Components\MainIndex\assets\.DS_Store" />
     <Content Include="Browser_Components\MainIndex\assets\uploads\.DS_Store" />
@@ -11020,9 +10948,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="assets\vendor_components\flat-color-icons\PNG\512\A\" />
     <Folder Include="assets\vendor_components\flexslider\node_modules\jquery\dist\" />
-    <Folder Include="Browser_Components\MainIndex\.git\branches\" />
-    <Folder Include="Browser_Components\MainIndex\.git\objects\info\" />
-    <Folder Include="Browser_Components\MainIndex\.git\refs\tags\" />
     <Folder Include="Data\" />
     <Folder Include="Scripts\jstoken\bin\" />
     <Folder Include="UploadedFiles\Lead\" />
@@ -11030,6 +10955,7 @@
     <Folder Include="Views\GoogleAuthLogin\" />
     <Folder Include="Views\GoogleAuth\" />
     <Folder Include="Views\IncomingMessages\" />
+    <Folder Include="Views\InvitationReference\" />
     <Folder Include="Views\LeadsInfo\" />
     <Folder Include="Views\PaymentGateway\" />
     <Folder Include="Views\PaymentGatway\" />
