--- a/Privont/Web.config
+++ b/Privont/Web.config
@@ -106,8 +106,8 @@
     </runtime>
     <connectionStrings>
         <add name="ConnectionString2" connectionString="Data Source=DESKTOP-7CATSA8\SQLEXPRESS;Initial Catalog=Privont;User ID=sa;password='551320'" providerName="System.Data.SqlClient" />
-        <add name="ConnectionString" connectionString="Data Source=DESKTOP-0TQUV80\DOTNETSERVER2K19;Initial Catalog=Privont;User ID=sa;password='551320'" providerName="System.Data.SqlClient" />
-        <add name="ConnectionString1" connectionString="Data Source=WIN-U2AB7GVN9OV\MSSQLSERVER2022;Initial Catalog=Privont;User ID=sa;password='Bismillah!1'" providerName="System.Data.SqlClient" />
+        <add name="ConnectionString1" connectionString="Data Source=DESKTOP-0TQUV80\DOTNETSERVER2K19;Initial Catalog=Privont;User ID=sa;password='551320'" providerName="System.Data.SqlClient" />
+        <add name="ConnectionString" connectionString="Data Source=WIN-U2AB7GVN9OV\MSSQLSERVER2022;Initial Catalog=Privont;User ID=sa;password='Bismillah!1'" providerName="System.Data.SqlClient" />
     </connectionStrings>
     <system.net>
         <mailSettings>
