--- a/Privont/Web.config
+++ b/Privont/Web.config
@@ -113,7 +113,7 @@
     <system.net>
         <mailSettings>
             <smtp from="info@privont.com">
-                <network host="webmail.privont.com" port="25" userName="info@privont.com" password="!SuNny!70" enableSsl="true" />
+                <network host="webmail.privont.com" port="465" userName="info@privont.com" password="o4_76vvF5" enableSsl="true" />
             </smtp>
         </mailSettings>
     </system.net>
